lazyCommit